--- a/settings.ini
+++ b/settings.ini
@@ -1,24 +1,24 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = nbdev_hello
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = {user}
-# description = A description of your project
+user = rozlana-g
+description = A tutorial of nbdev library
 # keywords = some keywords
-author = {author}
-author_email = {author_email}
+author = Rozlana G
+author_email = rozlanka@gmail.com
 # copyright = Put your copyright information here
-branch = {branch}
+branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
 language = English
 # Set to True if you want to create a more fancy sidebar.json than the default
-custom_sidebar = False
+custom_sidebar = True
 # Add licenses and see current list in `setup.py`
 license = apache2
 # From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
